# csc328server

./: .gitignore  Cargo.toml  README.md
server/: Cargo.toml  build.rs  end  logfile.txt
server/src/: lib.rs  main.rs
src/: lib.rs  main.rs
testClient/: Cargo.toml  README.md
testClient/src/: main.rs
