#   Authors:         Matthew Bartlett             & Arron ??
#   Major:          (Software Development & Math) & (Software Development)
#   Creation Date:  October  27, 2020
#   Due Date:       November 24, 2020
#   Course:         CSC328
#   Professor Name: Dr. Frye
#   Assignment:     
#   Filename:       main.rs
#   Purpose:        Manage the cargo config for the chat server
[package]
name    = "server"
version = "0.1.0"
authors = ["CTHULHU-Jesus <endercreeper92@gmail.com>"]
edition = "2018"
build   = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.1"
lazy_static = "1.4"
ctrlc = "3.1.7"
chrono = "0.4.19"
libc = "0.2"

